# nurkholisgantengbangets

./: CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
ci/: coverity.sh  test.ps1  test.sh
cli/: CMakeLists.txt  cli.h  cmd_clone.c  global.c  main.c  progress.c  progress.h
cli/win32/: console.c
client/: CMakeLists.txt  errors.c  errors.h  global.c
include/: git2client.h
include/git2/: deprecated.h  diff.h  errors.h  remote.h  types.h
src/: CMakeLists.txt  apply.c  assert_safe.h  attr_file.c  blame.c  blob.c  branch.c  buffer.c  cache.c  cache.h  checkout.c  cherrypick.c  clone.c  commit.c  common.h  config.c  config_file.c  config_parse.c  describe.c  diff.c  diff_file.c  diff_generate.c  diff_parse.c  diff_print.c  diff_stats.c  diff_tform.c  errors.c  errors.h  features.h.in  filter.c  futils.c  futils.h  global.c  global.h  index.c  indexer.c  integer.h  iterator.c  merge.c  merge_driver.c  (+47 more)
src/streams/: openssl.c
src/transports/: auth.c  auth.h  auth_ntlm.c  auth_ntlm.h  http.c
src/win32/: map.c
tests/: t13-threads.c  t18-status.c  test_lib.c  test_lib.h
tests-clay/object/tree/: frompath.c
tests-clay/status/: worktree.c
tests/diff/: blob.c
tests/online/: clone.c
util/: CMakeLists.txt  buf_text.h  buffer.h  errors.c  errors.h  futils.c  futils.h  hash.h  map.h  path.h  pool.h  posix.h  strmap.h  tsort.c  util.c  util.h  util_common.h  vector.h
util/allocators/: stdalloc.h  win32_crtdbg.h
util/hash/: sha1.h
util/unix/: posix.h
