PROJECT(git2_cli C)

ADD_DEFINITIONS(-DGIT_DEPRECATE_HARD)

FILE(GLOB CLI_SRC *.c)

IF(WIN32 AND NOT CYGWIN)
	FILE(GLOB CLI_SRC_OS win32/*.c)
ELSE()
	FILE(GLOB CLI_SRC_OS unix/*.c)
ENDIF()

SET(CLI_INCLUDES "${CMAKE_CURRENT_BINARY_DIR}" "${libgit2_SOURCE_DIR}/cli")

INCLUDE_DIRECTORIES(${CLI_INCLUDES} ${LIBGIT2_INCLUDES})
INCLUDE_DIRECTORIES(SYSTEM ${LIBGIT2_SYSTEM_INCLUDES})

ADD_EXECUTABLE(git2_cli ${CLI_SRC} ${CLI_SRC_OS} ${LIBGIT2_UTIL_OBJECTS} ${LIBGIT2CLIENT_UTIL_OBJECTS})
TARGET_LINK_LIBRARIES(git2_cli git2client git2 ${LIBGIT2_LIBS})

SET_TARGET_PROPERTIES(git2_cli PROPERTIES C_STANDARD 90)
SET_TARGET_PROPERTIES(git2_cli PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${libgit2_BINARY_DIR})
