PROJECT(git2client C)

ADD_DEFINITIONS(-DGIT_DEPRECATE_HARD)

FILE(GLOB CLIENT_SRC *.c)

IF(WIN32 AND NOT CYGWIN)
        FILE(GLOB CLIENT_SRC_OS win32/*.c)
ELSE()
        FILE(GLOB CLIENT_SRC_OS unix/*.c)
ENDIF()

SET(CLIENT_INCLUDES "${CMAKE_CURRENT_BINARY_DIR}" "${libgit2_SOURCE_DIR}/client")

INCLUDE_DIRECTORIES(${CLIENT_INCLUDES} ${LIBGIT2_INCLUDES})
INCLUDE_DIRECTORIES(SYSTEM ${LIBGIT2_SYSTEM_INCLUDES})

ADD_LIBRARY(git2client ${CLIENT_SRC} ${CLIENT_SRC_OS} ${LIBGIT2_UTIL_OBJECTS})
TARGET_LINK_LIBRARIES(git2client git2)

SET_TARGET_PROPERTIES(git2client PROPERTIES C_STANDARD 90)
SET_TARGET_PROPERTIES(git2client PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${libgit2_BINARY_DIR})
SET_TARGET_PROPERTIES(git2client PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${libgit2_BINARY_DIR})
SET_TARGET_PROPERTIES(git2client PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${libgit2_BINARY_DIR})

IF (SONAME)
	SET_TARGET_PROPERTIES(git2client PROPERTIES VERSION ${LIBGIT2_VERSION_STRING})
	SET_TARGET_PROPERTIES(git2client PROPERTIES SOVERSION ${LIBGIT2_VERSION_STRING})
ENDIF()
